feat(benchmarks): add parameterized measurement foundation and CI